--- a/html/dict-search.html
+++ b/html/dict-search.html
@@ -89,6 +89,12 @@
             dictArr =['小明1','小明2','小明3','小明4','小明5','小明6','小明7','小明8','小明9'];
         }else if(fieldName === 'meetingRecord'){
             dictArr =['会议1','会议2','会议3','会议4','会议5','会议6','会议7','会议8','会议9'];
+        }else if(fieldName === 'activityType'){
+            dictArr =['活动类型1','活动类型2','活动类型3','活动类型4','活动类型5'];
+        }else if(fieldName === 'isUseGovMoney'){
+            dictArr =['是','否'];
+        }else if(fieldName === 'activityBranch'){
+            dictArr =['支部1','支部2','支部3'];
         }
         var checkboxArr =[];
         if(type === 'checkbox'){
