--- a/html/party/party.html
+++ b/html/party/party.html
@@ -47,7 +47,7 @@
     </style>
 
 </head>
-<body>
+<body onselect="alert('You have selected some of the text.')" >
 
         <!--头信息-->
     <div class="top-div">
